--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <body>
 
-    <section class="jumbotron">
+    <section class="jumbotron" id="top">
         <div class="container">
             <div class="welcome-title">
                 <h1>
@@ -65,7 +65,9 @@
                     <i class="fab fa-2x fa-linkedin-in"></i>
                 </a></li>
         </ul>
+
     </section>
+
 
     <!-- projects-------------------------------------------------- -->
     <section class="projects">
@@ -118,7 +120,30 @@
                 alt="" class="project-img">
 
     </section>
+    <!-- footer-------------------------------------------------------------------------------------------------------- -->
 
+    <div class="wrapper">
+        <div class="clip-div"></div>
+    </div>
+
+    <footer class="footer">
+        <div class="top">
+            <a href="#top"><i class="fas fa-chevron-up fa-2x"></i></a>
+        </div>
+        <ul class="profile-link-menu">
+            <li class="profle-itmes">
+                <a href="" class="profile-links"><i class="far  fa-2x fa-envelope"></i></a>
+            <li class="profle-itmes"><a href="" class="profile-links">
+                    <i class="fab fa-2x fa-instagram"></i>
+                </a></li>
+            <li class="profle-itmes"><a href="" class="profile-links">
+                    <i class="fab fa-2x fa-github"></i>
+                </a></li>
+            <li class="profle-itmes"><a href="" class="profile-links">
+                    <i class="fab fa-2x fa-linkedin-in"></i>
+                </a></li>
+        </ul>
+    </footer>
 
 </body>
 
