--- a/index.html
+++ b/index.html
@@ -21,140 +21,118 @@
 
 <body>
     <main>
-    <div class="main">
-        <section class="jumbotron" id="top">
-            <div class="container">
-                <div class="welcome-title">
-                    <h1>
-                        Hi, My name is <span>Ajay Singh</span>
-                        <br>
-                        I'm a Frontend Web Developer.
-                    </h1>
+        <div class="main">
+            <section class="jumbotron" id="top">
+                <div class="container">
+                    <div class="welcome-title">
+                        <h1>
+                            Hi, My name is <span>Ajay Singh</span>
+                            <br>
+                            I'm a Frontend Web Developer.
+                        </h1>
+
+                    </div>
+
+                    <div class="btns">
+                        <a href="#project" type="submit" class="btn">
+                            <span>View my Work</span>
+                        </a>
+                        <a href="./assets/resume.pdf" type="submit" class="btn" download>
+                            <span>Download my Resume</span>
+                        </a>
+                    </div>
+
+                </div>
+                <img src="./assets/welcome.svg" alt="coder svg" class="welcome-svg">
+            </section>
+
+
+            <!-- about me ------------------------- -->
+            <section class="about">
+                <h1>ABOUT ME</h1>
+                <img src="./assets/myimgh.png" alt="my img" class="profile-pic">
+                <p class="profile-desc">Hey There ! My Name is Ajay Singh.</p>
+                <p class="profile-desc">
+
+                    I am currently pursuing my Bachelor's degree in Computer Science and Engineering from Institute of
+                    Technology Gopeshwar.
+                    I am passionate about Full Stack Web Development with an intense desire to adopt latest technologies
+                    to build responsive web applications and create amazing digital experience. </p>
+
+
+                <ul class="profile-link-menu">
+                    <li class="profle-itmes">
+                        <a href="mailto: ajayr1174@gmail.com" class="profile-links" target="_blank"><i
+                                class="far  fa-2x fa-envelope"></i></a>
+                    <li class="profle-itmes"><a href="https://www.instagram.com/ajayr1174/" class="profile-links"
+                            target="_blank">
+                            <i class="fab fa-2x fa-instagram"></i>
+                        </a></li>
+                    <li class="profle-itmes"><a href="https://github.com/ajayr1174" class="profile-links"
+                            target="_blank">
+                            <i class="fab fa-2x fa-github"></i>
+                        </a></li>
+                    <li class="profle-itmes"><a href="https://www.linkedin.com/in/ajay-rawat-219b4a199/"
+                            class="profile-links" target="_blank">
+                            <i class="fab fa-2x fa-linkedin-in"></i>
+                        </a></li>
+                </ul>
+
+            </section>
+
+
+            <!-- projects-------------------------------------------------- -->
+            <section class="projects" id="project">
+                <h1 class="project-heading">PROJECTS</h1>
+                <div class="projects-cards">
+                    <div class="project-desc">
+                        <h2 class="project-name">FireGram - Online photo gallary using firebase</h2>
+                        <p>In this project i have used Reacjs as frontend and firebase to store the images. Here you can
+                            upload your images and they will be store in the database as well as reflect in the webpage
+                            in realtime.</p>
+
+                        <a href="https://github.com/ajayr1174/reactproject" type="submit" class="btn">
+                            <span>View Code</span>
+                        </a>
+                    </div>
+
+                    <img src="./assets/pr1.png" alt="" class="project-img">
 
                 </div>
 
-                <div class="btns">
-                    <a href="#project" type="submit" class="btn">
-                        <span>View my Work</span>
-                    </a>
-                    <a href="./assets/resume.pdf" type="submit" class="btn" download>
-                        <span>Download my Resume</span>
-                    </a>
-                </div>
-
-            </div>
-            <img src="./assets/welcome.svg" alt="coder svg" class="welcome-svg">
-        </section>
 
 
-        <!-- about me ------------------------- -->
-        <section class="about">
-            <h1>ABOUT ME</h1>
-            <img src="./assets/myimgh.png" alt="my img" class="profile-pic">
-            <p class="profile-desc">Hey There ! My Name is Ajay Singh.</p>
-            <p class="profile-desc">
-       
-                I am currently pursuing my Bachelor's degree in Computer Science and Engineering from Institute of Technology Gopeshwar.
-                I am passionate about Full Stack Web Development with an intense desire to adopt latest technologies to build responsive web applications and create amazing digital experience. </p>
+            </section>
+            <!-- footer-------------------------------------------------------------------------------------------------------- -->
 
-
-            <ul class="profile-link-menu">
-                <li class="profle-itmes">
-                    <a href="mailto: ajayr1174@gmail.com" class="profile-links" target="_blank"><i class="far  fa-2x fa-envelope"></i></a>
-                <li class="profle-itmes"><a href="https://www.instagram.com/ajayr1174/" class="profile-links" target="_blank">
-                        <i class="fab fa-2x fa-instagram"></i>
-                    </a></li>
-                <li class="profle-itmes"><a href="https://github.com/ajayr1174" class="profile-links" target="_blank">
-                        <i class="fab fa-2x fa-github"></i>
-                    </a></li>
-                <li class="profle-itmes"><a href="https://www.linkedin.com/in/ajay-rawat-219b4a199/" class="profile-links" target="_blank">
-                        <i class="fab fa-2x fa-linkedin-in"></i>
-                    </a></li>
-            </ul>
-
-        </section>
-
-
-        <!-- projects-------------------------------------------------- -->
-        <section class="projects" id="project">
-            <h1 class="project-heading">PROJECTS</h1>
-            <div class="projects-cards">
-                <div class="project-desc">
-                    <h2 class="project-name">Loerm loerem Lorem ipsum</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem, consequatur amet
-                        expedita
-                        perferendis maxime facilis aliquid a autem officiis odit, eius nesciunt quos, nostrum laudantium
-                        repudiandae. Quo nesciunt necessitatibus ipsa!</p>
-
-                    <a href="#" type="submit" class="btn">
-                        <span>See Live</span>
-                    </a>
-                </div>
-
-                <img src="https://images.unsplash.com/photo-1593642634315-48f5414c3ad9?ixid=MnwxMjA3fDF8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=80"
-                    alt="" class="project-img">
-
-            </div>
-            <div class="projects-cards">
-                <div class="project-desc">
-                    <h2 class="project-name">Loerm loerem Lorem ipsum</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem, consequatur amet
-                        expedita
-                        perferendis maxime facilis aliquid a autem officiis odit, eius nesciunt quos, nostrum laudantium
-                        repudiandae. Quo nesciunt necessitatibus ipsa!</p>
-
-                    <a href="#" type="submit" class="btn">
-                        <span>See Live</span>
-                    </a>
-                </div>
-
-                <img src="https://images.unsplash.com/photo-1519389950473-47ba0277781c?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1950&q=80"
-                    alt="" class="project-img">
+            <div class="wrapper">
+                <div class="clip-div"></div>
             </div>
 
-            <div class="projects-cards">
-                <div class="project-desc">
-                    <h2 class="project-name">Loerm loerem Lorem ipsum</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem, consequatur amet
-                        expedita
-                        perferendis maxime facilis aliquid a autem officiis odit, eius nesciunt quos, nostrum laudantium
-                        repudiandae. Quo nesciunt necessitatibus ipsa!</p>
-
-                    <a href="#" type="submit" class="btn">
-                        <span>See Live</span>
-                    </a>
+            <footer class="footer">
+                <div class="top">
+                    <a href="#top"><i class="fas fa-chevron-up fa-2x"></i></a>
                 </div>
-
-                <img src="https://images.unsplash.com/photo-1487058792275-0ad4aaf24ca7?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MzB8fHRlY2h8ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60"
-                    alt="" class="project-img">
-
-        </section>
-        <!-- footer-------------------------------------------------------------------------------------------------------- -->
-
-        <div class="wrapper">
-            <div class="clip-div"></div>
+                <ul class="profile-link-menu">
+                    <li class="profle-itmes">
+                        <a href="mailto: ajayr1174@gmail.com" class="profile-links" target="_blank"><i
+                                class="far  fa-2x fa-envelope"></i></a>
+                    <li class="profle-itmes"><a href="https://www.instagram.com/ajayr1174/" class="profile-links"
+                            target="_blank">
+                            <i class="fab fa-2x fa-instagram"></i>
+                        </a></li>
+                    <li class="profle-itmes"><a href="https://github.com/ajayr1174" class="profile-links"
+                            target="_blank">
+                            <i class="fab fa-2x fa-github"></i>
+                        </a></li>
+                    <li class="profle-itmes"><a href="https://www.linkedin.com/in/ajay-rawat-219b4a199/"
+                            class="profile-links" target="_blank">
+                            <i class="fab fa-2x fa-linkedin-in"></i>
+                        </a></li>
+                </ul>
+            </footer>
         </div>
-
-        <footer class="footer">
-            <div class="top">
-                <a href="#top"><i class="fas fa-chevron-up fa-2x"></i></a>
-            </div>
-            <ul class="profile-link-menu">
-                <li class="profle-itmes">
-                    <a href="mailto: ajayr1174@gmail.com" class="profile-links" target="_blank"><i class="far  fa-2x fa-envelope"></i></a>
-                <li class="profle-itmes"><a href="https://www.instagram.com/ajayr1174/" class="profile-links" target="_blank">
-                        <i class="fab fa-2x fa-instagram"></i>
-                    </a></li>
-                <li class="profle-itmes"><a href="https://github.com/ajayr1174" class="profile-links" target="_blank">
-                        <i class="fab fa-2x fa-github"></i>
-                    </a></li>
-                <li class="profle-itmes"><a href="https://www.linkedin.com/in/ajay-rawat-219b4a199/" class="profile-links" target="_blank">
-                        <i class="fab fa-2x fa-linkedin-in"></i>
-                    </a></li>
-            </ul>
-        </footer>
-    </div>
-</main>
+    </main>
 </body>
 
 </html>
