--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                         </a>
                     </div>
 
-                    <img src="./assets/pr1.png" alt="" class="project-img">
+                    <img src="assets/pr1.png" alt="" class="project-img">
 
                 </div>
 
